# forge

./: .buildinfo  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  ComputeCopy_8h.htm  ComputeCopy_8h.js  ComputeCopy_8h_source.htm  ForgeConfig.cmake.in  LICENSE  README.md  README_8md.htm  annotated.htm  annotated_dup.js  appveyor.yml  appveyor_deps_install.ps1  chart_8h.htm  chart_8h.js  chart_8h_source.htm  classes.htm  classforge_1_1Chart.htm  classforge_1_1Chart.js  classforge_1_1Error.htm  classforge_1_1Error.js  classforge_1_1Font.htm  classforge_1_1Font.js  classforge_1_1Histogram.htm  classforge_1_1Histogram.js  classforge_1_1Image.htm  classforge_1_1Image.js  classforge_1_1Plot.htm  classforge_1_1Plot.js  classforge_1_1Surface.htm  classforge_1_1Surface.js  classforge_1_1VectorField.htm  classforge_1_1VectorField.js  classforge_1_1Window.htm  classforge_1_1Window.js  (+130 more)
.doctrees/: environment.pickle  index.doctree
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
CMakeModules/: BuildType.cmake  CPackConfig.cmake  ConditionalDirectory.cmake  DependencyCheck.cmake  FGInstallDirs.cmake  FindFontConfig.cmake  FindFreeImage.cmake  FindFreeType.cmake  FindGLEWmx.cmake  FindGLFW.cmake  FindOpenGL.cmake  FindSDL2.cmake  FindSphinx.cmake  Findfreetype.cmake  ForgeBuildType.cmake  ForgeCPackConfig.cmake  ForgeConfig.cmake.in  ForgeConfigVersion.cmake.in  ForgeConfigureDepsVars.cmake  ForgeFreetypeVCPKGTriplet.cmake  ForgeInstallDirs.cmake  ForgeInternalUtils.cmake  ForgePlatformSetup.cmake  GLSLtoH.cmake  HunterGate.cmake  InternalUtils.cmake  Version.cmake  build_cl2hpp.cmake  build_freetype.cmake  build_freetypegl.cmake  build_glbinding.cmake  build_glm.cmake  freetype.cmake  glsl2cpp.cpp  platform.cmake  version.h.in  (+1 more)
docs/: CMakeLists.txt  conf.py  doxygen.mk  index.rst  layout.xml
docs/pages/: README.md
docs/rst/: enums.rst  examples.rst  extras.rst  forge.rst  functions.rst  macros.rst  samples.rst
examples/: CMakeLists.txt
examples/CMakeModules/: FindGLEWmx.cmake  FindNVVM.cmake  FindOpenGL.cmake  IfNotThisThenInclude.cmake  InternalUtils.cmake  build_cl2hpp.cmake
examples/cpu/: CMakeLists.txt  bubblechart.cpp  field.cpp  fractal.cpp  histogram.cpp  pie.cpp  plot3.cpp  plot3d.cpp  plotting.cpp  stream.cpp  surface.cpp
examples/cuda/: CMakeLists.txt  bubblechart.cu  field.cu  fractal.cu  histogram.cu  plot3.cu  plot3d.cu  plotting.cu  stream.cu  surface.cu
examples/opencl/: CMakeLists.txt  bubblechart.cpp  cl_helpers.h  field.cpp  fractal.cpp  histogram.cpp  plot3.cpp  plot3d.cpp  plotting.cpp  stream.cpp  surface.cpp
examples/qt5Widget/: plot3.cpp  plot3MainWindow.cpp  plot3MainWindow.h  plot3Threaded.cpp  plot3ThreadedMainWindow.cpp  plot3ThreadedMainWindow.h
src/: CMakeLists.txt  chart.cpp  chart.hpp  cmap.hpp  colormap.cpp  colormap.hpp  common.cpp  common.hpp  err_common.cpp  err_common.hpp  exception.cpp  font.cpp  font.hpp  font_atlas.cpp  font_atlas.hpp  histogram.cpp  histogram.hpp  histogram1d.cpp  image.cpp  image.hpp  plot.cpp  plot.hpp  plot2d.cpp  plot3.cpp  plot3.hpp  scatter.cpp  scatter.hpp  surface.cpp  surface.hpp  window.cpp  window.hpp
src/api/c/: CMakeLists.txt  chart.cpp  err_common.cpp  err_common.hpp  exception.cpp  font.cpp  histogram.cpp  image.cpp  pie.cpp  plot.cpp  plot2d.cpp  surface.cpp  type_util.cpp  type_util.hpp  vector_field.cpp  window.cpp
src/api/cpp/: CMakeLists.txt  chart.cpp  chartWidget.cpp  error.hpp  exception.cpp  font.cpp  histogram.cpp  image.cpp  pie.cpp  plot.cpp  plot2d.cpp  surface.cpp  vector_field.cpp  window.cpp
src/backend/: CMakeLists.txt  Chart.hpp  Font.hpp  Histogram.hpp  Image.hpp  Plot.hpp  Surface.hpp  Window.hpp  chart.hpp  chart_common.hpp  chart_renderables.hpp  cmap.hpp  common.cpp  common.hpp  defines.hpp  err_common.cpp  err_common.hpp  font.hpp  handle.cpp  handle.hpp  image.cpp  image.hpp  plot2d.cpp  plot2d.hpp  window.cpp  window.hpp
src/backend/common/: CMakeLists.txt  chart.hpp  chart_common.hpp  chart_renderables.hpp  cmap.hpp  defines.hpp  err_common.cpp  err_common.hpp  err_handling.cpp  err_handling.hpp  font.hpp  handle.cpp  handle.hpp  image.hpp  util.cpp  util.hpp  window.hpp
src/backend/cpu/: CMakeLists.txt  traits.hpp  types.hpp  window.cpp  window.hpp
src/backend/cuda/: CMakeLists.txt  err_cuda.hpp  traits.hpp  types.hpp  window.cu  window.hpp
src/backend/glsl_shaders/: CMakeLists.txt  font_vs.glsl  histogram_fs.glsl  marker2d_vs.glsl  pie_gs.glsl  pie_vs.glsl  plot3_fs.glsl  vector_field2d_gs.glsl  vector_field2d_vs.glsl  vector_field_gs.glsl  vector_field_vs.glsl
src/backend/opencl/: CMakeLists.txt  types.hpp  window.cpp  window.hpp
src/backend/opengl/: CMakeLists.txt  abstract_renderable.hpp  backend.hpp  chart.cpp  chart.hpp  chart_impl.cpp  chart_impl.hpp  colormap.cpp  colormap_impl.cpp  colormap_impl.hpp  common.cpp  common.hpp  err_opengl.cpp  err_opengl.hpp  font.cpp  font.hpp  font_atlas.cpp  font_atlas_impl.cpp  font_atlas_impl.hpp  font_impl.cpp  font_impl.hpp  gl_helpers.cpp  gl_helpers.hpp  gl_native_handles.cpp  gl_native_handles.hpp  histogram.cpp  histogram.hpp  histogram_impl.cpp  histogram_impl.hpp  image.cpp  image.hpp  image_impl.cpp  image_impl.hpp  pie_impl.cpp  pie_impl.hpp  plot.cpp  plot.hpp  plot_impl.cpp  plot_impl.hpp  shader_program.cpp  (+13 more)
src/backend/opengl/glfw/: CMakeLists.txt  window.cpp  window.hpp
src/backend/opengl/qt5/: CMakeLists.txt  dockWrapper.cpp  dockWrapper.hpp  window.cpp  window.hpp
src/backend/opengl/sdl/: CMakeLists.txt  window.cpp  window.hpp
src/backend/opengl/shaders/: chart_fs.glsl  chart_vs.glsl  font_fs.glsl  histogram_fs.glsl  histogram_vs.glsl  image_fs.glsl  image_vs.glsl  marker_fs.glsl  plot3_fs.glsl  plot3_vs.glsl  tick_fs.glsl  vector_field2d_gs.glsl  vector_field2d_vs.glsl  vector_field_gs.glsl  vector_field_vs.glsl
src/glfw/: window.cpp  window.hpp
src/sdl/: window.cpp  window.hpp
src/shaders/: font_fs.glsl  histogram_fs.glsl  image_fs.glsl  marker2d_vs.glsl  marker_fs.glsl  plot3_fs.glsl  plot3_vs.glsl  tick_fs.glsl
(+64 files in other folders)
